finished with searching and displaying info

--- a/lt-showcase/app/page.module.css
+++ b/lt-showcase/app/page.module.css
@@ -1,3 +1,12 @@
+.topBarDiv{
+  padding: 15px;
+  background-color: lightgrey;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
 .resultsDropDown{
   margin-left: 5px;
 }
